--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,18 @@ img {
   display: block;
   max-width: 100%;
 }
+.timer {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+}
+
+.value {
+  font-size: 30px;
+  font-weight: 400;
+  text-align: center;
+}
